test/Fail/Sections-4.agda
postulate
  F : Set → Set → Set

syntax F X Y = X ! Y

test : Set → Set → Set
test X = _! X
