test/Fail/Sections-4.err
Sections-4.agda:7,10-14: error: [OperatorInformation]
Could not parse the application _! X
Operators used in the grammar:
  None
when scope checking _! X
